syntax = "proto3";

package proto;
option go_package = "./;proto";

message SceneUnlockInfo {
  uint32 sceneId = 1;
  bool isLocked = 2;
  repeated uint32 sceneTagIdList = 3;
}
